fix: align project title in the center of its banner (#162)
* fix: align project title in the center of its banner

* fix: update based on PR feedback

* fix: remove unnecessary height

* fix: use margin value of 0 instead of unset

--- a/src/assets/styles/collections/_projects.css
+++ b/src/assets/styles/collections/_projects.css
@@ -16,6 +16,13 @@
         inset 0 -0.1875rem 0 0 var(--fl-fgColor, transparent);
 }
 
+.project .banner .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+
 .project .banner a {
     align-items: center;
     display: flex;
@@ -113,7 +120,6 @@
 
 @media (width >= 70.875rem) {
     .project .banner {
-        align-items: flex-start;
         box-shadow:
             -75rem 0 0 0 var(--fl-fgColor, var(--project-color)),
             inset 3.5rem 0 0 0 var(--fl-fgColor, var(--project-color)),
@@ -125,9 +131,9 @@
         padding-block: 0;
     }
 
-    .project .banner .flow {
-        margin-block-start: 5.5rem;
-        width: auto;
+    .project .banner a {
+        position: absolute;
+        top: 5.5rem;
     }
 
     .project .banner .image {
